Pass principal name to movie api